--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "doge-tracker",
   "version": "1.0.0",
   "main": "bot.js",
+  "type": "module",
   "dependencies": {
     "discord.js": "^14.0.0",
     "node-fetch": "^3.3.2"
-  },
-  "type": "module"
+  }
 }
