--- a/.github/workflows/update-status.yml
+++ b/.github/workflows/update-status.yml
@@ -3,7 +3,7 @@ name: Update Bot Status
 on:
   schedule:
     - cron: '*/15 * * * *'  # every 15 minutes UTC
-  workflow_dispatch:
+  workflow_dispatch:        # manual trigger
 
 jobs:
   update-status:
